--- a/windows_opengl/OpenGL/OpenGL/OpenGL.vcxproj
+++ b/windows_opengl/OpenGL/OpenGL/OpenGL.vcxproj
@@ -133,6 +133,9 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="res\shaders\Shader_basic.shader" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
