--- a/windows_opengl/OpenGL/OpenGL/OpenGL.vcxproj.filters
+++ b/windows_opengl/OpenGL/OpenGL/OpenGL.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="res\shaders\Shader_basic.shader" />
+  </ItemGroup>
 </Project>
