Modified linux project to work with my Centos system

--- a/open_gl_project/makefile
+++ b/open_gl_project/makefile
@@ -1,8 +1,8 @@
 APP = app
 CC=g++
 CLEANBROKEN = '1'
-LIBS = -Wall -g -lGL -lX11 -lpthread -lXrandr -lXi -ldl -lglad -Lusr/lib/libGLEW.so -lGLEW -lglfw -lXxf86vm -lXinerama -lXcursor -fpermissive -I.
-SRC = app.cpp
+LIBS = -Wall -g -lGL -lX11 -lpthread -lXrandr -lXi -ldl -L./glad.h -Lusr/lib/libGLEW.so -lGLEW -Lusr/lib64/libglfw.so -lglfw -lXxf86vm -lXinerama -lXcursor -fpermissive -I.
+SRC = app.cpp glad.c
 OBJ = $(SRC:.ccp=.o)
 
 all: build
